tests/specs/ctor_overloads.txt
# mod.ts
export class A {
  constructor (a: string);
  constructor (a: number);
  constructor (a: string | number) {
    //
  }
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class A {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   constructor (a: string);
  |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:3:3
  | 
3 |   constructor (a: number);
  |   ^

# output.txt
Defined in file:///mod.ts:0:1

class A

  constructor(a: string)
  constructor(a: number)


# output.json
{
  "symbols": [
    {
      "name": "A",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "class",
          "def": {
            "constructors": [
              {
                "name": "constructor",
                "params": [
                  {
                    "kind": "identifier",
                    "name": "a",
                    "optional": false,
                    "tsType": {
                      "repr": "string",
                      "kind": "keyword",
                      "value": "string"
                    }
                  }
                ],
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 1,
                  "col": 2,
                  "byteIndex": 19
                }
              },
              {
                "name": "constructor",
                "params": [
                  {
                    "kind": "identifier",
                    "name": "a",
                    "optional": false,
                    "tsType": {
                      "repr": "number",
                      "kind": "keyword",
                      "value": "number"
                    }
                  }
                ],
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 2,
                  "col": 2,
                  "byteIndex": 46
                }
              },
              {
                "hasBody": true,
                "name": "constructor",
                "params": [
                  {
                    "kind": "identifier",
                    "name": "a",
                    "optional": false,
                    "tsType": {
                      "kind": "union",
                      "value": [
                        {
                          "repr": "string",
                          "kind": "keyword",
                          "value": "string"
                        },
                        {
                          "repr": "number",
                          "kind": "keyword",
                          "value": "number"
                        }
                      ]
                    }
                  }
                ],
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 3,
                  "col": 2,
                  "byteIndex": 73
                }
              }
            ]
          }
        }
      ]
    }
  ]
}
